<resources>
    <string name="app_name">EncryptedSharedPreferencesSample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="initialize_header">Initialize/Open</string>
    <string name="initialize_switch">Encrypted SharedPreferences</string>
    <string name="save_header">Save text</string>
    <string name="save">Save</string>
    <string name="read_header">Read text</string>
    <string name="read">Read</string>
    <string name="timestamp">done in %1$dms</string>
    <string name="raw_file_content">Raw file content</string>
</resources>